--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,5 +7,11 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    <style name="RainBow" parent="AppTheme">
+        <item name="android:name" />
+    </style>
+    <declare-styleable name="RainBowl">
+        <attr name="android:name" format="string"/>
+    </declare-styleable>
 
 </resources>
