--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,5 +33,14 @@
         app:layout_constraintRight_toRightOf="parent"
         android:onClick="goToDataBindingActivity"
         />
+    <Button
+        android:id="@+id/btn_onclick"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/click"
+        app:layout_constraintTop_toBottomOf="@+id/btn_go_to_data_binding"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
